@@ -82,12 +82,13 @@
         <setting id="official.country" subsetting="true" type="select" label="32635" values="AE|AR|AU|AT|BB|BE|BG|BH|BM|BO|BR|BS|CA|CH|CL|CO|CR|CZ|DE|DK|DO|DZ|EC|EE|EG|ES|FI|FR|GB|GF|GI|GR|GT|HK|HN|HR|HU|ID|IE|IN|IS|IT|JM|JO|JP|KR|KW|LI|LT|LV|LY|MA|MC|MD|MY|MX|NL|NO|NZ|OM|PA|PE|PH|PL|PT|PY|QA|RO|RU|SA|SE|SG|SK|SM|SV|TH|TN|TR|TW|US|UY|VE|YE|ZA" default="US" visible="eq(-2,true)" />
         <setting id="prime" subsetting="true" type="bool" label="AMAZON PRIME" default="true" visible="eq(-3,true)" enable="System.HasAddon(plugin.video.amazon-test)" />
         <setting id="iplayer" subsetting="true" type="bool" label="BBC IPLAYER" default="true" visible="eq(-4,true)" enable="System.HasAddon(plugin.video.iplayerwww)" />
-        <setting id="curstream" subsetting="true" type="bool" label="CURIOSITY STREAM" default="true" visible="eq(-5,true)" enable="System.HasAddon(slyguy.curiositystream)" />
-        <setting id="disney.plus" subsetting="true" type="bool" label="DISNEY+" default="true" visible="eq(-6,true)" enable="System.HasAddon(slyguy.disney.plus)" />
-        <setting id="hbo.max" subsetting="true" type="bool" label="HBO MAX" default="true" visible="eq(-7,true)" enable="System.HasAddon(slyguy.hbo.max)" />
-        <setting id="hulu" subsetting="true" type="bool" label="HULU" default="true" visible="eq(-8,true)" enable="System.HasAddon(slyguy.hulu)" />
-        <setting id="netflix" subsetting="true" type="bool" label="NETFLIX" default="true" visible="eq(-9,true)" enable="System.HasAddon(plugin.video.netflix)" />
-        <setting id="paramount" subsetting="true" type="bool" label="PARAMOUNT+" default="true" visible="eq(-10,true)" enable="System.HasAddon(slyguy.paramount.plus)" />
+        <setting id="crackle" subsetting="true" type="bool" label="CRACKLE" default="true" visible="eq(-5,true)" enable="System.HasAddon(plugin.video.crackle)" />
+        <setting id="curstream" subsetting="true" type="bool" label="CURIOSITY STREAM" default="true" visible="eq(-6,true)" enable="System.HasAddon(slyguy.curiositystream)" />
+        <setting id="disney.plus" subsetting="true" type="bool" label="DISNEY+" default="true" visible="eq(-7,true)" enable="System.HasAddon(slyguy.disney.plus)" />
+        <setting id="hbo.max" subsetting="true" type="bool" label="HBO MAX" default="true" visible="eq(-8,true)" enable="System.HasAddon(slyguy.hbo.max)" />
+        <setting id="hulu" subsetting="true" type="bool" label="HULU" default="true" visible="eq(-9,true)" enable="System.HasAddon(slyguy.hulu)" />
+        <setting id="netflix" subsetting="true" type="bool" label="NETFLIX" default="true" visible="eq(-10,true)" enable="System.HasAddon(plugin.video.netflix)" />
+        <setting id="paramount" subsetting="true" type="bool" label="PARAMOUNT+" default="true" visible="eq(-11,true)" enable="System.HasAddon(slyguy.paramount.plus)" />
         <setting type="lsep" label="32636" />
         <setting id="external.providers" type="bool" label="32637" default="true" />
         <setting id="open.Osettings" subsetting="true" type="action" label="32085" option="close" action="RunPlugin(plugin://script.module.oathscrapers/?mode=oathscrapersettings)" enable="eq(-1,true)" />
@@ -161,7 +162,7 @@
         <setting id="subtitles.lang.2" type="select" label="32357" values="Afrikaans|Albanian|Arabic|Armenian|Basque|Bengali|Bosnian|Breton|Bulgarian|Burmese|Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Esperanto|Estonian|Finnish|French|Galician|Georgian|German|Greek|Hebrew|Hindi|Hungarian|Icelandic|Indonesian|Italian|Japanese|Kazakh|Khmer|Korean|Latvian|Lithuanian|Luxembourgish|Macedonian|Malay|Malayalam|Manipuri|Mongolian|Montenegrin|Norwegian|Occitan|Persian|Polish|Portuguese|Portuguese(Brazil)|Romanian|Russian|Serbian|Sinhalese|Slovak|Slovenian|Spanish|Swahili|Swedish|Syriac|Tagalog|Tamil|Telugu|Thai|Turkish|Ukrainian|Urdu" enable="!eq(-3,false)" default="English" />
         <setting type="sep" />
         <setting id="subtitles.utf" type="bool" label="32355" enable="!eq(-5,false)" default="false" />
-        <setting id="subtitles.notify" type="bool" label="32361" enable="!eq(-6,false)" default="false" />
+        <setting id="subtitles.notify" type="bool" label="32361" enable="!eq(-6,false)" default="true" />
         <setting id="subs.text" type="text" label="32118" enable="false" />
     </category>
 
